# coffee-caller

./: .env-example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  build-frontend-mobile.yml  build-frontend-web.yml  frontend-mobile.yml  publish-to-ghcr.yml
backend/: .env-example  .eslintrc.json  Dockerfile  package.json  tsconfig.json
backend/src/: environment.ts  main.ts  message-pipeline.ts
frontend-cross-platform-maui/: .gitignore  CoffeeCaller.sln
frontend-cross-platform-maui/CoffeeCaller/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  CoffeeCaller.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  SocketClient.cs
frontend-desktop/: Cargo.toml  build.rs
frontend-desktop-rust/: Dockerfile
frontend-desktop-rust/src/: main.rs
frontend-desktop-rust/src/ui/: MainWindow.slint
frontend-desktop/src/: main.rs
frontend-desktop/src/ui/: MainWindow.slint  Settings.slint
frontend-mobile/: README.md  analysis_options.yaml  pubspec.yaml
frontend-mobile/android/app/: build.gradle
frontend-mobile/ios/Runner.xcodeproj/: project.pbxproj
frontend-mobile/lib/: environment.dart  main.dart  socket_client.dart  theme.dart
frontend-mobile/linux/: CMakeLists.txt  my_application.cc
frontend-mobile/test/: app_test.dart  widget_test.dart
frontend-mobile/web/: index.html  manifest.json
frontend-mobile/windows/: CMakeLists.txt
frontend-web/: .eslintrc.json  Dockerfile  package.json  tsconfig.json  vite.config.ts
frontend-web/src/: App.module.css  App.tsx  index.css  index.tsx  protocol.ts  socket-client.ts
(+70 files in other folders)
