[package]
name = "CoffeeCallerDesktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = "0.3.1"
slint = "0.3.0"
serde_json = "1.0.85"
serde = "1.0.144"

[build-dependencies]
slint-build = "0.3.0"