[package]
name = "CoffeeCallerDesktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = "0.3.1"
slint = "0.3.0"
serde_json = "1.0.85"
serde = "1.0.99"
config = "0.13.2"
toml = "0.5.9"
dirs = "4.0.0"

[dependencies.chrono]
version = "0.4.0"
features = ["serde"]

[build-dependencies]
slint-build = "0.3.0"